--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <ul class="menu">
         <li><a href="#">Accueil</a>
         </li>
-        <li><a href="#">Nos sercices</a>
+        <li><a href="#">Nos services</a>
         </li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">A propos</a></li>
