--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <nav>
       <a href="index.html" class="logo"><img src="stilogo.png" /></a>
       <ul class="menu">
-        <li><a href="#">Accueil</a>
+        <li><a href="index.html">Accueil</a>
         </li>
         <li><a href="#">Nos services</a>
         </li>
