--- a/service.html
+++ b/service.html
@@ -8,6 +8,7 @@
     <title>STI Technology</title>
 </head>
 <body>
+  <a href="index.html" class="logo"><img src="stilogo.png" /></a>
     <nav>
       <a href="index.html" class="logo"><img src="stilogo.png" /></a>
       <ul class="menu">
