ajout des modif

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,13 @@
       <table>
         <tr>
           <td class="formulaire">
-            <form action="envoye.php" method="get">
+            <form action="mailto:mokadem59200@live.fr?subject=Test&body=Mon test de mail" method="get">
               Nom <br><input type="text" name="nom"><br>
               Prénom <br><input type="text" name="prenom"><br>
               Email <br><input type="email" name="email" id=""><br>
+              Objet <br><input type="text" name="sujet" id=""><br>
               Message <br><input type="text" name="message" id="msg" width="200"><br>
-              <input type="submit" value="Envoyer" id="send" >
+              <a href="mailto:mokadem59200@live.fr?subject=Test&body=Mon test de mail"><input type="submit" value="Envoyer" id="send" ></a>
             </form>
           </td>
           <td class="info"><img src="informatique.jpg" /></td>
@@ -48,7 +49,7 @@
             <p><img src="phone.png"/><b>Tél. : </b><a href="tel:" class="tel"> 09 20 70 34 43</a></p><br>
             <p><img src="phone.png"/><b>Fax :</b><a href="tel:" class="tel"> 09 56 53 36 47</a></p>
           </td>
-          <td class="contact"><a href="#" class="foot">Contactez-nous</a></td>
+          <td class="contact"><a href="mailto:mokadem59200@live.fr?subject=Test&body=Mon test de mail" class="foot">Contactez-nous</a></td>
         </tr>
       </table><br>
       <p style="color: white;">@ 2022 STI Technology Copyright Ihssane</p> 
