--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style_index.css">
     <title>STI Technology</title>
 </head>
@@ -29,16 +30,18 @@
     <footer>
       <table class="gauche">
         <tr>
-          <td class="logo">
-            <img src="stilogo.png"/>
-          </td>
           <td class="coordonnee">
             <img src="adresse.png"/><b>106, rue de Mouvaux 59200 TOURCOING </b><br>
             <p><img src="rcs.png"/><b>R.C.S. Roubaix – Tourcoing :</b> 517 866 075 00016 </p> <br>
             <p><img src="phone.png"/><b>Tél. : </b><a href="tel:" class="tel"> 09 20 70 34 43</a></p><br>
             <p><img src="phone.png"/><b>Fax :</b><a href="tel:" class="tel"> 09 56 53 36 47</a></p>
           </td>
-          <td><a href="contact.html" class="foot">Contactez-nous</a></td>
+          <td class="rs">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+          </td>
+          <td class="contact"><a href="contact.html" class="foot">Contactez-nous</a></td>
         </tr>
       </table><br>
       <p style="color: white;">@ 2022 STI Technology Copyright Ihssane</p> 
