ajout des modif

--- a/service.html
+++ b/service.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style_service.css">
     <title>STI Technology</title>
 </head>
 <body>
   <a href="index.html" class="logo"><img src="stilogo.png" /></a>
     <nav>
-      <a href="index.html" class="logo"><img src="stilogo.png" /></a>
       <ul class="menu">
         <li><a href="index.html">Accueil</a>
         </li>
@@ -21,11 +21,61 @@
       </ul>
     </nav>
     
-    <div class="conteneur">
-      <iframe src="https://www.google.com/maps/embed?pb=!4v1669506669436!6m8!1m7!1sPR2EUvOYkXXZCVvXq-fGtQ!2m2!1d50.69480500807562!2d3.152071898886066!3f170.1687669480117!4f4.2928853967725615!5f0.4000000000000002" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+    <h1 class="titre">NOS SERVICES</h1>
+
     <contenu>
-      <p>Bienvenu chez STI Technology</p>
+      <div class="one">
+        <h1>Vente matériel, consommables, logiciels</h1></br></br>
+        <p>•	Large choix de produits grâce à de nombreux partenariats</p>
+        <p>•	Vente et installation des logiciels Microsoft Windows, CIEL, Antivirus, ….</p>
+        <p>•	Assemblage et intégration de matériel, possibilité de stations dédiées à la vidéo, musique, jeux, DAO, CAO</p>
+        <p>•	Vente de matériel informatique destiné aux points de vente, restaurants, hôtels</p>
+        <p>• Vente et installation des différents  logiciels.</p>
+      </div>
+
+      <div class="two">
+        <h1>Réseaux et accès internet</h1></br></br>
+          <p>•	Raccordement au réseau internet</p>
+          <p>•	Solutions de téléphonie VOIP(Voix sur internet protocol), Fax par mail</p>
+          <p>•	Installation des réseaux locaux d’entreprise</p>
+          <p>•	Installation configuration réseau Cisco</p>
+      </div>
+
+      <div class="three">
+        <h1>Administration, maintenance, dépannage, réparation</h1></br></br>
+        <p>•	Dépannage sur de multiples produits (Ordinateur portable, station de travail, tablette, smartphone, GPS, mobiles, etc...) et systèmes d'exploitations (Windows, Mac OSX, Android, Linux)</p>
+        <p>•	Dépannage électronique(Hardware) et Logiciel (Software)</p>
+        <p>•	Maintenance et administration des serveurs windows 2008, 2012, 2019, 2021- Contrat de maintenance adaptés avec suivis des travaux.</p>
+        <p>•Mise en place de serveurs virtuels ou dédié externalisés dans le CLOUD </p>
+      </div>
+
+      <div class="four">
+        <h1>Sauvegardes données, restauration, disponibilité</h1></br></br>
+        <p>•	Sauvegardes des données.</p>
+        <p>•	Etude de vos besoins en terme de reprise après sinistre (serveur, station de travail) et mise en place de plans de sauvegardes adaptés</p>
+        <p>•Récupération de données suite à des problèmes logiques, électroniques ou mécaniques</p>
+      </div>
+
+      <div class="five">
+        <h1>Installation des systèmes de vidéosurveillance</h1></br></br>
+        <p>•	Vidéosurveillance particuliers et professionnels</p>
+        <p>•	Domotique</p>
+        <p>•	Caméra IP </p>
+        <p>•	Enregistreur Vidéo (DVR, NVR)</p>
+        <p>•Système d’alarme et incendie</p>
+      </div>
+
+      <div class="sic">
+        <h1>Formations</h1></br></br>
+        <p>•	Formations possibles sur une suite bureautique (WORD, EXCEL)</p>
+        <p>•	Formations selon les demandes et évidemment les compétences de l’entreprise.</p>
+        <p>•	Formations en Systèmes Numériques</p>
+      </div>
+
+      <div class="seven">
+        <h1>Création site web, vidéosurveillance</h1></br></br>
+        <p>•	Création de sites web, mise à jour de sites web</p>
+      </div>
     </contenu>
     <footer>
       <table class="gauche">
@@ -38,6 +88,11 @@
             <p><img src="rcs.png"/><b>R.C.S. Roubaix – Tourcoing :</b> 517 866 075 00016 </p> <br>
             <p><img src="phone.png"/><b>Tél. : </b><a href="tel:" class="tel"> 09 20 70 34 43</a></p><br>
             <p><img src="phone.png"/><b>Fax :</b><a href="tel:" class="tel"> 09 56 53 36 47</a></p>
+          </td>
+          <td class="rs">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
           </td>
           <td><a href="contact.html" class="foot">Contactez-nous</a></td>
         </tr>
