--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,15 @@
       <ul class="menu">
         <li><a href="index.html">Accueil</a>
         </li>
-        <li><a href="#">Nos services</a>
+        <li><a href="service.html">Nos services</a>
         </li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">A propos</a></li>
       </ul>
     </nav>
     
+    <h1 class="titre">CONTACT</h1>
+
     <contenu>
       <table>
         <tr>
