--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul class="menu">
         <li><a href="index.html">Accueil</a>
         </li>
-        <li><a href="#">Nos services</a>
+        <li><a href="service.html">Nos services</a>
         </li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="#">A propos</a></li>
