ajout des modif

--- a/service.html
+++ b/service.html
@@ -94,7 +94,7 @@
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-linkedin"></a>
           </td>
-          <td><a href="contact.html" class="foot">Contactez-nous</a></td>
+          <td class="contact"><a href="contact.html" class="foot">Contactez-nous</a></td>
         </tr>
       </table><br>
       <p style="color: white;">@ 2022 STI Technology Copyright Ihssane</p> 
