ajout des modif

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
       <table>
         <tr>
           <td class="formulaire">
-            <form name="myForm" action="/file.php" onsubmit="return validateForm()" method="post">
+            <form name="myForm" action="/envoye.php" onsubmit="return validateForm()" method="post">
               <table class="form-style">
                  <tr>
                     <td>
