ajout des modif

--- a/contact.html
+++ b/contact.html
@@ -77,50 +77,10 @@
       <table>
         <tr>
           <td class="formulaire">
-            <form name="myForm" action="./envoye.php" onsubmit="return validateForm()" method="post">
-              <table class="form-style">
-                 <tr>
-                    <td>
-                       <label>
-                          Votre nom <span class="required">*</span>
-                       </label>
-                    </td>
-                    <td>
-                       <input type="text" name="name" class="long"/>
-                       <span class="error" id="errorname"></span>
-                    </td>
-                 </tr>
-                 <tr>
-                    <td>
-                       <label>
-                          Votre adresse e-mail <span class="required">*</span>
-                       </label>
-                    </td>
-                    <td>
-                       <input type="email" name="email" class="long"/>
-                       <span class="error" id="erroremail"></span>
-                    </td>
-                 </tr>
-                 <tr>
-                    <td>
-                       <label>
-                          Message <span class="required">*</span>
-                       </label>
-                    </td>
-                    <td>
-                       <textarea name="message" class="long field-textarea"></textarea>
-                       <span class="error" id="errormsg"></span>
-                    </td>
-                 </tr>
-                 <tr>
-                    <td></td>
-                    <td>
-                       <input type="submit" value="Envoyer">      
-                       <input type="reset" value="Réinitialiser"> 
-                    </td>
-                 </tr>
-              </table>
-           </form>
+            <h1 class="bg">Besoin de plus de détails ?</br>Un soucis avec un de nos produits ?</br>Nos prestations vous interessent ?</h1></br></br>
+            <form action="mailto:mokadem59200@live.fr">
+            <button class="button" style="vertical-align:middle" ><span>Contactez-nous</span></button>
+            </form>
           </td>
           <td class="info"><div></div></td>
         </tr>
@@ -141,7 +101,7 @@
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-linkedin"></a>
           </td>
-          <td class="contact"><a href="mailto:mokadem59200@live.fr?subject=Test&body=Mon test de mail" class="foot">Contactez-nous</a></td>
+          <td class="contact"><a href="#" class="foot">Contactez-nous</a></td>
         </tr>
       </table><br>
       <p style="color: white;">@ 2022 STI Technology Copyright Ihssane</p> 
